--- a/style.css
+++ b/style.css
@@ -454,3 +454,10 @@ button:active{
 #join {
 	visibility: hidden;
 }
+
+#darkmodetoggle {
+	top: 70%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	position: absolute;
+}
